Merged V4.0-BUG-FIX to HEAD    33116: Allow multiple deferred requests per oplock break, next level of fix for ALF-11935.    33136: Fix for ALF-12200: "Content type is not recognized on creating document from source"    33137: Activities feed generator: change info log messages to debug log messages    33139: ALF-12262	View in Source Repository works incorrect if the folder was created on target side at first    33141: Fix for ALF-12178 "Bulk import - status page shows broken link (Initiate another in-place import)"    33144: Fixes ALF-11119: The 2 tranformations didn't work - Segmentation fault in ffmpeg - it looks like a bug with ffmpeg and it was decided that compile/bug fixing ffmpeg is not a priority at the moment.  The 2 entries have been commented out.  If they are required, the user should consult the ffmpeg documentation for the correct version & o/s at the time.    33146: ALF-11345 Patch from Pavel Yurkevich to fix another VTI/SPP problem with site names that start with Alfresco    33147: FTP implemented set modification date/time command (MFMT). ALF-12105.    33148: ALF-12063 Pull some of the VTI list type definitions out to a common base class    33150: Merged BRANCHES/DEV/mward/schemacomp to BRANCHES/DEV/V4.0-BUG-FIX:       33076: ALF-12285: Allow dumping of schema to XML via JMX    33151: Fix problems with FTP and UTF-8. JLAN-81.    When using the Java6 Normalizer use the NFC form.    33158: Fix NFS server swallows exceptions. ALF-11667.    Startup exception details are now saved.    33160: Improve the Vti/SPP exception message for the case of the Vti port being already in use    33161: ALF-12063 Additional SPP/Vti list info required for Mac Office 2011 support    33162: Fixes: ALF-10322: Edit Dialogue gets out of sync if event moved using FullCalendar (extends FullCalendar to provide a callback after an event changes, which enables us to keep our event object up to date).    33163: Fixes: ALF-10248: Grey Placeholder image for unauthorised channels has